# octavios-chat

./: .coveragerc  .dockerignore  .env.example  .env.production  .gitignore  ARCHITECTURE.md  ARCHITECTURE_MIGRATION.md  CAPITAL414_SUCCESS_REPORT.md  CHANGELOG.md  CHANGELOG_CICD_OPTIMIZATION.md  CHANGELOG_CICD_OPTIMIZATIONS.md  CHECKLIST_CACHE_GUARD.md  CLAUDE.md  DEPLOY-NOW.sh  DEPLOYMENT.md  DEPLOY_PRODUCTION.md  DEPLOY_QUICKSTART.md  DOCKER-CICD-OPTIMIZATION.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.frontend-fixed  Dockerfile.local  ENTERPRISE-PIPELINE.md  FINAL_TESTING_REPORT.md  FINAL_TEST_SUMMARY.md  FIXES_CAPITAL414.md  FIXES_COMPLETE.md  HTTPS-SETUP-COMPLETE.md  INTEGRATION_TESTING.md  LICENSE  MIGRATION_PLAN.md  Makefile  NEXT_PRIORITIES.md  OCTAVIUS_2.0_HYGIENE_REPORT.md  PHASE2_COMPLETED.md  PHASE_P0_PROGRESS.md  PRE_MIGRATION_CHECKLIST.md  PRODUCTION_FIXES_SUMMARY.md  PRODUCTION_SETUP.md  PRUEBAS_SISTEMA_PROMPTS.md  (+54 more)
apps/api/: .coveragerc  .dockerignore  .env.development  .env.development.sample  .env.example  .env.production  .env.production.sample  CHECKLIST_CACHE_GUARD.md  Dockerfile  Dockerfile.optimized  README.md  debug_rag.py  debug_redirect.py  debug_saptiva_test.py  final_saptiva_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_document_tests.sh  run_document_tests_docker.sh  run_tests.sh  saptiva_domain_test.py  simple_saptiva_test.py  test_aletheia_standalone.py  test_mock_fallback.py  test_real_saptiva.py  test_saptiva.py  test_system_functionality.py
apps/api/diagnostico/: cache_report.json
apps/api/logs/network_checks/: postfix.txt
apps/api/prompts/: registry.yaml
apps/api/scripts/: create_demo_user.py  seed_demo_data.py
apps/api/src/: main.py  test_module.py
apps/api/src/config/: compliance.yaml
apps/api/src/core/: auth.py  config.py  constants.py  crypto.py  database.py  email_utils.py  exceptions.py  logging.py  prompt_registry.py  redis_cache.py  secrets.py  telemetry.py
apps/api/src/domain/: __init__.py  audit_handler.py  chat_context.py  chat_response_builder.py  chat_strategy.py  message_handlers.py
apps/api/src/mcp/: fastapi_adapter.py  protocol.py  server.py  tasks.py  tool.py  versioning.py
apps/api/src/middleware/: auth.py  telemetry.py
apps/api/src/models/: __init__.py  artifact.py  chat.py  document.py  history.py  review_job.py  task.py  user.py  validation_report.py
apps/api/src/routers/: __init__.py  auth.py  chat.py  chat_legacy.py  chat_new_endpoint.py  conversations.py  deep_research.py  document_review_README.md  documents.py  features.py  files.py  health.py  history.py  mcp_admin.py  metrics.py  reports.py  review.py  settings.py  stream.py
apps/api/src/schemas/: __init__.py  audit.py  audit_message.py  auth.py  chat.py  common.py  document.py  error.py  files.py  health.py  intent.py  research.py  review.py  (+2 more)
apps/api/tests/: README.md  README_TEST_SUITE.md  conftest.py  ocr_benchmark_alphaxiv.py  test_auth_email_normalization.py  test_intent.py  test_messages_images.py  test_prompt_registry.py  test_text_sanitizer.py
apps/api/tools/: pdf_to_markdown.py
plugins/bank-advisor-private/: .env.example  ANALISIS_COMPATIBILIDAD.md  CHANGELOG.md  DISEÑO_INTEGRACION_5_PREGUNTAS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  README_ETL.md  REFACTOR_REPORT.md  SOLID_ANALYSIS.md  VALIDACION_COMPLETA.md  adversarial_results_20251127_182009.json  database_schema.sql  docker-entrypoint.sh  metrics_catalog_results_20251203_161608.json  pyproject.toml  pytest.ini  requirements.txt  test_5_questions.sh
plugins/bank-advisor-private/config/: bankadvisor.yaml  synonyms.yaml  visualizations.yaml
plugins/bank-advisor-private/docs/: 9_PRIORITY_VISUALIZATIONS.md  ANALISIS_MEJORAS_2025-11-27.md  ARCHITECTURE.md  BUG_REPORT_IMOR_CALCULATION.md  DEMO_SCRIPT_2025-12-03.md  E2E_TEST_PLAN.md  ETL_ENHANCEMENT.md  ETL_SCHEDULER_SETUP.md  FRONTEND_INTEGRATION.md  HALLAZGOS_DATA_QUALITY.md  NEXT_SESSION_CHECKLIST.md  NL2SQL_PHASE4_COMPLETE.md  PLAN_VALIDACION_QUERIES_GRAFICAS.md  Q1_2025_COMPLETION_SUMMARY.md  QA_TEST_RESULTS.md  SESSION_Q1_2025_IMPLEMENTATION.md  SMOKE_TEST_GUIDE.md  SMOKE_TEST_RESULTS_2025-11-29.md  etl_data_status.md  nl2sql_status_report.md
plugins/bank-advisor-private/etl/: __init__.py  carga_inicial_bancos.sql  etl_processor.py  etl_unified.py  loaders_polars.py  transforms_polars.py
plugins/bank-advisor-private/migrations/: 001_add_missing_columns.sql  002_add_calculated_metrics.sql  003_add_performance_indexes.sql  003_add_performance_indexes_v2.sql  003_schema_extended_unified.sql  004_query_logs_rag_feedback.sql  005_create_etl_runs.sql
plugins/bank-advisor-private/scripts/: adversarial_test.py  apply_migration_004.py  benchmark_performance.py  benchmark_performance_http.py  docker-entrypoint.sh  e2e_integration_test.py  fix_etl_with_banco.py  init_postgres_database.sh  inspect_excel_files.py  manual_flow_test.py  ops_validate_etl.py  run_etl_enhancement.sh  run_nl2sql_dirty_tests.sh  seed_nl2sql_rag.py  seed_qdrant_direct.py  setup_bankadvisor_data.sh  smoke_demo_bank_analytics.py  smoke_demo_bank_analytics.sh  smoke_simple.sh  test_5_new_queries.py  test_clarification_flow_e2e.py  test_metrics_catalog_e2e.py  test_postgres_connection.py  test_rag_feedback_e2e.py  validate_data_integrity.py  validate_env.sh  validate_metrics_data_quality.py  verify_nl2sql.sh
plugins/bank-advisor-private/src/: __init__.py  main.py  main_refactored.py
plugins/bank-advisor-private/tests/: test_9_priority_visualizations.py  test_e2e_demo_flows.py  test_integration_manual.sh  test_llm_fallback.py  test_nl_variants.py
plugins/capital414-private/: Dockerfile  README.md  pyproject.toml  requirements.txt
plugins/capital414-private/src/: __init__.py  main.py
plugins/private/aletheia/: .env.example  .gitignore  ALETHEIA_CICD_TEMPLATE.yml  Dockerfile  IMPLEMENTATION.md  QUICKSTART.md  README-alethia.md  README.md  openapi.json  openapi.yaml  pyproject.toml  qa.yaml  requirements.txt
plugins/public/file-manager/: Dockerfile  README.md  pyproject.toml  requirements.txt
(+1421 files in other folders)
