[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capital414-private"
version = "1.0.0"
description = "COPILOTO_414 Document Compliance Validation MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "414 Capital", email = "tech@414capital.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mcp", "compliance", "audit", "pdf", "validation"]

dependencies = [
    "mcp>=1.3.0",
    "fastmcp>=2.0.0",
    "pypdf>=3.17.0",
    "pymupdf>=1.24.0",
    "reportlab>=4.0.0",
    "opencv-python-headless>=4.8.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "rapidfuzz>=3.0.0",
    "PyYAML>=6.0.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
capital414-auditor = "src.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
