[project]
name = "octavios-file-manager"
version = "1.0.0"
description = "OctaviOS File Manager - Public plugin for file upload, download, and text extraction"
authors = [
    {name = "Saptiva Team", email = "dev@saptiva.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/saptiva/octavios-file-manager"
Documentation = "https://docs.saptiva.com/plugins/file-manager"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
